--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -22,8 +22,25 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    background-color: #f6e5b9;
+    padding: 20px;
+    border-radius: 70px;
+    border: 2px solid #9b5b3f;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    align-items: center;
+    position: relative;
+    //&::after{
+    //  position: absolute;
+    //  content: "";
+    //  width: 20px;
+    //  height: 20px;
+    //  border-radius: 50%;
+    //  background-color: #00ff05;
+    //  bottom: 25px;
+    //  left: 95px;
+    //}
     span {
-      color: #ffffff;
+      color: #000000;
       cursor: pointer;
     }
   }
@@ -32,17 +49,22 @@
     height: 100px;
     border-radius: 50%;
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.5);
+    //position: relative;
+
   }
   &__info {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px solid #f6e5b9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   &__data {
     display: flex;
     flex-direction: column;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 3px;
+    align-items: center;
     padding: 5px;
     label {
       margin-bottom: 20px;
