--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
   &__container {
     max-width: 390px;
     display: flex;
@@ -81,4 +82,16 @@ input[type="file"] {
   border-radius: 5px;
   padding: 5px;
   font-family: "Roboto", sans-serif !important;
+}
+
+.input__box{
+  position: relative;
+}
+
+.errors {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-bottom: 10px;
+  height: 20px;
 }
