--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   padding-top: 10px;
   &__container {
-    max-width: 390px;
+    width: 460px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,6 +86,7 @@ input[type="file"] {
 
 .input__box{
   position: relative;
+  width: 100%;
 }
 
 .errors {
